--- a/apache_ubuntu1804/files/index.html
+++ b/apache_ubuntu1804/files/index.html
@@ -65,7 +65,7 @@
                         </p>
 
                         <p>
-                            <i class=" far fa-envelope"></i> General Support <br />
+                            <em class=" far fa-envelope"></em> General Support <br />
                             <span>contact@example.com</span>
                         </p>
                     </div>
